Fix broken styling on safari iOS

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2367,6 +2367,7 @@ p {
 .template-li {
   display: flex;
   width: 100%;
+  align-items: center;
   justify-content: space-between;
   padding: 0px;
 }
@@ -2376,6 +2377,11 @@ p {
   justify-content: center;
   align-items: center;
   color: var(--text_flavour_bright);
+}
+
+.template-left {
+  display: flex;
+  flex-direction: column;
 }
 
 .template-name {
@@ -2391,6 +2397,13 @@ p {
   margin-right: 10px;
 }
 
+.template-share-code {
+  display: flex;
+  margin: 0px;
+  color: var(--text_flavour_bright);
+  font-weight: 400;
+}
+
 .template-buttons {
   display: flex;
   gap: 5px;
@@ -2402,6 +2415,7 @@ p {
   align-items: center;
   height: 25px;
   width: 25px;
+  padding: 1px 4px;
   border: 1px solid var(--elem_border);
   border-radius: 3px;
   background-color: transparent;
@@ -2423,8 +2437,9 @@ p {
 .template-button-tooltip {
   display: none;
   position: absolute;
-  text-wrap: nowrap;
+  white-space: nowrap;
   font-size: 12px;
+  width: fit-content;
   color: var(--text_dark);
   bottom: 28px;
   -moz-animation: 1s ease-out 0s 1 fadein;
